# Explice

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: chat_controller.rs  cmd.rs  completion.rs  dialog.rs  lib.rs  main.rs  storage.rs
cli/src/cmd/: assistant.rs  chat.rs  config.rs  init.rs  shell.rs
cli/src/cmd/assistant/: add.rs  list.rs
lib/: Cargo.toml
lib/src/: ai.rs  assistant.rs  assistants.rs  chat_record.rs  completion.rs  config.rs  lib.rs  open_ai.rs  parse.rs  persist.rs  placeholder.rs  storage.rs  validation.rs
lib/src/ai/: chat.rs
lib/src/assistant/: external_assistant.rs  local_assistant.rs
lib/src/assistants/: assistant.rs  local_assistant.rs  predefined.rs
lib/src/open_ai/: assistants.rs  chat.rs  thread.rs
persist/: Cargo.toml
persist/src/: lib.rs  local.rs
src/: cmd.rs  main.rs
src/cmd/: assistant.rs  chat.rs  complete.rs  init.rs
src/cmd/assistant/: add.rs  list.rs
src/persistence/: assistants.rs  config.rs  mod.rs
src/use_case/: ai.rs
