[package]
name = "explice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
async-openai = "0.17.1"
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.34.0"
toml = { version = "0.8.8", features = [] }
