[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "explice"
path = "src/main.rs"

[dependencies]
lib = { path= "../lib" }
clap = { version = "4.4.11", features = ["derive"] }
anyhow = { version = "1.0.75", features = [] }
dialoguer = {  version = "0.11.0", features = ["completion"] }
tokio = { version = "1.34.0", features = ["rt", "net", "rt-multi-thread", "macros"] }