[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "explice"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
persist = { path = "../persist" }
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
tokio = { version = "1.36.0", features = ["rt", "net", "rt-multi-thread", "macros"] }
dirs = "5.0.1"