[package]
name = "lib"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dirs = "5.0.1"
async-openai = "0.19.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
regex = "1.10.3"
itertools = "0.12.1"
chrono = { version = "0.4.35", features = ["serde"] }
ulid = "1.1.2"
